<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Thangamoil</string>
    <string name="empty"> </string>
    <string name="hello_world">Hello world!</string>
    <string name="action_Import_bills">Import Bills</string>
    <string name="action_import">Import</string>
    <string name="action_Import_customer">Import Customers</string>
    <string name="action_Import_items">Import Items</string>
    <string name="action_Export">Export receipt and Order</string>
    <string name="export">Export</string>
    <string name="report">Order Report</string>
    <string name="action_delete">Delete receipt and Order</string>
    <string name="shop_id">Shop Id</string>
    <string name="order">Get Order</string>
    <string name="bill_no">Bill No</string>
    <string name="balance">Balance</string>
    <string name="bill_date">Bill Date</string>
    <string name="cash">By Cash</string>
    <string name="check">By Check</string>
    <string name="amount">Amount</string>
    <string name="checkno">Check No</string>
    <string name="checkdate">Check Date</string>
    <string name="Bankname">Bank Name</string>
    <string name="order_header">Thangam Agmark Gingelly Oil</string>
    <string name="ml1000">1000 ml</string>
    <string name="ml500">500 ml</string>
    <string name="ml200">200 ml</string>
    <string name="ml100">100 ml</string>
    <string name="ml50">50 ml</string>
    <string name="tin">15kg Tin</string>
    <string name="save">Save</string>
    <string name="go">GO</string>
    <string name="Text">Thangam Oil</string>
    <string name="payment">Payment By</string>
    <string name="error">No Bending Bill Founded</string>
    <string name="error2">There is No more User found</string>
     <string name="setting">Settings</string>
    <string name="username">User Name</string>
    <string name="pword">Password</string>
    <string name="UserId">User Id</string>
    <string name="login">Login</string>
    <string name="sms">SMS BY</string>
    <string name="byphone">Phone</string>
    <string name="byWS">Web Service</string>
    <string name="deleteMenu">Delete</string>
    <string name="deleteall">Delete All</string>
    <string name="deletereceipt">Delete Receipt</string>
    <string name="deletebills">Delete Bills</string>
    <string name="deleteorders">Delete Orders</string>
    <string name="prefix">Prefix</string>
    <string name="recipte">Receipt</string>
    <string name="get_order">Get Order</string>
    <string name="action_Import_Bank">Import Bank</string>
    <string name="update">Update</string>
    <string name="newuser">New User</string>
    <string name="euser">Existing User</string>
    <string name="admin">My Detail</string>
    <string name="Usersetting">User Setting</string>
    <string name="banklist">Bank List</string>
    
</resources>
