<menu 
    xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.thangamoil.MainActivity" >
    <item
     	android:id="@+id/Import"
     	android:orderInCategory="100"
     	android:title="@string/action_import"> 
	    <menu>
	        <group 
	            android:id="@+id/Import_Group" 
	            android:checkableBehavior="none">
	            <item
			        android:id="@+id/action_Import_bills"
			        android:orderInCategory="100"
			        android:title="@string/action_Import_bills"/>
	            <item
			        android:id="@+id/action_Import_customer"
			        android:orderInCategory="100"
			        android:title="@string/action_Import_customer"/>
	        </group>   
        </menu>
    </item>

    <item
     	android:id="@+id/Export"
     	android:orderInCategory="100"
     	android:title="@string/export"> 
	    <menu>
	        <group 
	            android:id="@+id/Export_Group" 
	            android:checkableBehavior="none">
	                <item
				    	android:id="@+id/action_Export"
				     	android:orderInCategory="100"
				     	android:title="@string/action_Export"/>
	        </group>   
        </menu>
    </item>

    <item
    	android:id="@+id/add_user"
     	android:orderInCategory="100"
     	android:title="@string/Usersetting"/>
    
    <item
    	android:id="@+id/Gen_report"
     	android:orderInCategory="100"
     	android:title="@string/report"/>
</menu>
