<?xml version="1.0" encoding="utf-8"?>
<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical" 
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" 
    android:background="#145266"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">
    
    <TableLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:shrinkColumns="*"  
		android:stretchColumns="*">
		
        <RadioGroup
	        android:id="@+id/User_radio"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:layout_weight="1"
	        android:background="@drawable/bg_radio">
          
	        <RadioButton
	            android:id="@+id/New_User"
	            android:textStyle="bold"
	            android:textColor="#FFF"
	             android:onClick="onRadioButtonClicked"
	            android:layout_weight="1"
	            android:text="@string/newuser" />
	
	        <RadioButton
	            android:id="@+id/Existing_User"
	            android:textStyle="bold"
	            android:layout_weight="1"
	            android:textColor="#FFF"
	             android:onClick="onRadioButtonClicked"
	            android:text="@string/euser" />
	        <RadioButton
	            android:id="@+id/User_admin"
	            android:textStyle="bold"
	            android:layout_weight="1"
	            android:textColor="#FFF"
	            android:onClick="onRadioButtonClicked"
	            android:text="@string/admin" />
		</RadioGroup>
    	<TableRow
    	    android:id="@+id/TR_listshow"
	        android:layout_marginTop="20sp"
			android:minHeight="38dp"
	        android:layout_height="wrap_content"
	        android:layout_width="match_parent"
		    android:gravity="center">
	         
	        <Spinner
			       android:id="@+id/exeitingUser_id"
			       android:background="@drawable/btn_dropdown"
			       android:layout_weight="1"
			       android:gravity="center"
			       android:spinnerStyle="@android:style/Widget.Spinner.DropDown"/>
	        
    	</TableRow>
    	
	    <TableRow
	        android:id="@+id/TR_username"
	        android:layout_marginTop="20sp"
	        android:minHeight="38dp"
	        android:layout_height="wrap_content"
	        android:layout_width="match_parent"
		    android:gravity="center">
	        
	          <TextView
				android:layout_weight="1"
				android:gravity="start"
				android:textStyle="bold"
				android:textSize="18sp"
	            android:textColor="#FFF"
	            android:text="@string/username" />
	        
	        <EditText
	            android:id="@+id/username"
	            android:layout_height="match_parent"
	            android:layout_weight="1"
		        android:textColor="#FFF"
		        android:textStyle="bold"
		        android:hint="@string/username"
		        android:gravity="center">
	            <requestFocus />
	        </EditText>
	        
	    </TableRow>
	    <TableRow
	        android:id="@+id/TR_Pword"
	        android:layout_marginTop="20sp"
	        android:minHeight="38dp"
	        android:layout_height="wrap_content"
	        android:layout_width="match_parent"
		    android:gravity="center">
	        
	          <TextView
				android:layout_weight="1"
				android:gravity="start"
				android:textStyle="bold"
				android:textSize="18sp"
	            android:textColor="#FFF"
	            android:text="@string/pword" />
	        
	        <EditText
	            android:id="@+id/usepword"
		        android:textColor="#FFF"
		        android:textStyle="bold"
		        android:hint="@string/pword"
		        android:layout_weight="1"
		        android:gravity="center"/>
	        
	    </TableRow>
	    <TableRow
	        android:id="@+id/TR_UserId"
	        android:layout_marginTop="20sp"
	        android:minHeight="38dp"
	        android:layout_height="wrap_content"
	        android:layout_width="match_parent"
		    android:gravity="center">
	        
	          <TextView
				android:layout_weight="1"
				android:gravity="start"
				android:textStyle="bold"
				android:textSize="18sp"
	            android:textColor="#FFF"
	            android:text="@string/UserId" />
	        
	        <EditText
	            android:id="@+id/User_Id"
		        android:textColor="#FFF"
		        android:layout_weight="1"
		        android:hint="@string/UserId"
		        android:textStyle="bold"
		        android:gravity="center" />
	        
	    </TableRow>
	    <TableRow
	        android:id="@+id/TR_save"
	        android:layout_marginTop="20sp"
	        android:minHeight="38dp"
	        android:layout_height="wrap_content"
	        android:layout_width="match_parent"
		    android:gravity="center">
	        
	        <Button
			    android:id="@+id/Save_New"
				style="@style/button"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:text="@string/save"/>	
	    </TableRow>
	    <TableRow
	        android:id="@+id/TR_update"
	        android:layout_marginTop="20sp"
	        android:minHeight="38dp"
	        android:layout_height="wrap_content"
	        android:layout_width="match_parent"
		    android:gravity="center">
	        
			<Button
			    android:id="@+id/Update_User"
				style="@style/button"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:text="@string/update"/>	
			    
			 <TextView
			    android:id="@+id/Txt_error"
				android:textStyle="bold"
				android:layout_weight="1"
				android:textSize="18sp"
	            android:textColor="#FFF"
	            android:text="@string/error2" />
	    </TableRow>
	</TableLayout>
</ScrollView>