<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" tools:context=".LoginActivity"
    android:background="@drawable/background"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">
    
    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:src="@drawable/rounded_edittext"
        android:orientation="vertical"
	    android:gravity="center_vertical|center_horizontal">
	    
        
        <ImageView 
		   android:id="@+id/test_image1"
		   android:src="@drawable/balaj"
		   android:layout_width="wrap_content"
		   android:layout_height="wrap_content"/>
        
       </LinearLayout>

     <LinearLayout
        android:id="@+id/ll2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_vertical|center_horizontal">
        
        <ProgressBar 
            android:id="@+id/login_progress" 
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content"
            android:visibility="gone" />
        
        <ScrollView 
            android:id="@+id/login_form" 
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            
            <LinearLayout 
                android:layout_width="match_parent" 
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/email_login_form" 
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" 
                    android:orientation="vertical">

                    <AutoCompleteTextView android:id="@+id/username" 
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" 
                        android:hint="@string/username"
                        android:inputType="text" 
                        android:maxLines="1"
                        android:singleLine="true"
                        android:layout_marginBottom="10dp"
                        android:textColorHint="#FFF"
                        android:textColor="#FFF" />

                    <EditText 
                        android:id="@+id/password" 
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" 
                        android:hint="@string/pword"
                        android:imeActionLabel="@string/login"
                        android:imeOptions="actionUnspecified" 
                        android:inputType="textPassword"
                        android:maxLines="1" android:singleLine="true"
                        android:layout_marginBottom="10dp"
                        android:textColorHint="#FFF"
                        android:textColor="#FFF" />

                    <Button 
                        android:id="@+id/login1" 
                        style="?android:textAppearanceSmall"
                        android:layout_width="match_parent" 
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp" 
                        android:text="@string/login"
                        android:textStyle="bold"
                        android:textColor="#FFF"
                        android:background="#2E3C41" />

                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
 </LinearLayout>
